--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="header-text">
       <h1>Hi, I'm <span>Sarita</span></h1>
       <p>This is my portfolio Website to shows all skills and work experience<br> on web development.</p>
-      <a href="https://github.com/Akki-Y/cod_soft/blob/main/personal_portfoilo_website/sarita-resume.pdf">DOWNLOAD
+      <a href="./sarita-resume.pdf">DOWNLOAD
         CV</a> <br>
       <img src="https://alldesigncreators.weebly.com/uploads/1/0/7/7/107775165/portfolio_orig.jpeg">
     </div>
